--- a/store/templates/send_mail.html
+++ b/store/templates/send_mail.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<style type="text/css">
+		h1, h2 {
+		  text-align: center;
+		}
+        img{
+        margin = 0
+        }
+</style>
+<div class="alert alert-success" role="alert">
+    <h1> Cảm ơn bạn đã mua hàng! </h1>
+    <h2> Thông tin đơn hàng đã được gửi đến email của bạn. Vui lòng kiểm tra lại</h2>
+</div>
+<center>
+    <img class="img" src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/356380832_828127388655223_299679333132300306_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=4c1e7d&_nc_ohc=YSuhy2QL5IIAX8w1SjW&_nc_ht=scontent.fhan14-1.fna&oh=00_AfBbHY4kdQkuGYVJDccA6Jzg81w23uyyJe00aBvouLTCjw&oe=6521E711" />
+</center>
+
+{% endblock %}
