--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -79,7 +79,12 @@
                     <label for="">Phone</label>
                     <input type="text" name="phone" id="" class="form-control" placeholder="" aria-describedby="helpId">
                   </div>
-
+                <div class="form-group">
+                    <label for="">Email</label>
+                    <input required type="email" name="email" id=""
+                    value="{{values.email}}"
+                    class=" form-control" style="width : 100%;" placeholder="abc@gmail.com">
+                </div>
                   <input type="submit" class="btn float-right btn-outline-success col-lg-6" value="Check out">
             </form>
           </div>
