--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -17,6 +17,7 @@
                     <th>Price</th>
                     <th>Quantity</th>
                     <th>Total</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
