--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -30,6 +30,11 @@
                     <td>{{product.price|currency}}</td>
                     <td>{{product|cart_quantity:request.session.cart}}</td>
                     <td>{{product|price_total:request.session.cart|currency}}</td>
+                    <td><form action="/cart" method="POST">
+                      {% csrf_token %}
+                      <input type="hidden" name="product_id" value="{{ product.id }}">
+                      <button type="submit" class="btn btn-danger btn-sm"> Remove </button>
+                    </form></td>
                 </tr>
 
                 {% endfor %}
