--- a/store/templates/email.html
+++ b/store/templates/email.html
@@ -1,1 +1,10 @@
-ĐI NGỦ THOAI
+Hello {{name}},<br>
+
+We’re happy to let you know that we’ve received your order.<br>
+
+Once your package ships, we will send you an email with a tracking number and link so you can see the movement of your package.<br>
+If you have any questions, contact us here or call us on 0936068537! We are here to help!<br>
+
+Returns: If you would like to return your product(s), please contact us.<br>
+
+
