--- a/store/templates/send_mail.html
+++ b/store/templates/send_mail.html
@@ -10,8 +10,8 @@
         }
 </style>
 <div class="alert alert-success" role="alert">
-    <h1> Cảm ơn bạn đã mua hàng! </h1>
-    <h2> Thông tin đơn hàng đã được gửi đến email của bạn. Vui lòng kiểm tra lại</h2>
+    <h1> Thank you for your purchase! </h1>
+    <h2> Order information has been sent to your email. Please check again !</h2>
 </div>
 <center>
     <img class="img" src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/356380832_828127388655223_299679333132300306_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=4c1e7d&_nc_ohc=YSuhy2QL5IIAX8w1SjW&_nc_ht=scontent.fhan14-1.fna&oh=00_AfBbHY4kdQkuGYVJDccA6Jzg81w23uyyJe00aBvouLTCjw&oe=6521E711" />
