--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -50,10 +50,10 @@
         <li class="nav-item active">
           <a class="nav-link" href="/store">Store <span class="sr-only">(current)</span></a>
         </li>
-
+        <li class="nav-item active">
+          <a class="nav-link" href="/search">Search <i class="fas fa-search"></i><span class="sr-only">(current)</span></a>
+        </li>
           </ul>
-
-
 
 
       <ul class=" navbar-nav my-2 my-lg-0">
